--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,44 @@ html {
 .wrapper {
     display: grid;
     grid-template-rows: minmax(1fr 200px) 6fr;
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 1fr 5fr;
+}
+
+.title {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    align-items: center;
+    justify-items: center;
+    padding: 0;
+    margin: 0;
+     padding: 15px; 
+  
+}
+
+.title > h1 {
+    justify-self: start;
+    margin-left: 10px;
 }
 
 ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
+    
+}
+
+li {
+    margin-left: 10px;
+    padding: 15px;    
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    align-items: center;
+}
+
+li > p {
+    justify-self: start;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 nav {
