--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 html {
     font-family: 'Roboto', sans-serif;
-
 }
 
+body {
+    max-width: 1500px;
+
+}
 .wrapper {
     display: grid;
     grid-template-rows: minmax(1fr 200px) 6fr;
@@ -33,6 +36,7 @@ ul {
 }
 
 li {
+    color: #FFFFFF;
     margin-left: 10px;
     padding: 15px;    
     display: grid;
@@ -47,19 +51,134 @@ li > p {
 }
 
 nav {
-    background-color: aqua;
+    background-color: #1992D4;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
 }
 
+header {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    padding: 15px 30px;
+}
+
+.search {
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+    align-items: end;
+}
+
+.search > i {
+    padding-right: 10px;
+    align-self: center;
+    justify-self: center;
+}
+
+
+.search input[type=text] {
+    padding: 8px;
+    border: none;
+    background-color: #E2E8F0;
+    border-radius: 20px;
+    margin-top: 0px;
+    margin-right: 16px;
+    font-size: 17px;
+  }
+  
+
+
+.greeting {
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+    margin-top: 20px;
+}
+
+.greeting img {
+    align-self: center;
+    justify-self: center;
+    height: 70px;
+    width: 70px;
+    border-radius: 50px; 
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+}
+
+.greeting > p, h1 {
+    padding: 0;
+    margin: 0;
+}
+
+.greeting > p {
+    font-size: medium;
+    align-self: flex-end;
+
+}
+
+.greeting h1 {
+    padding-top: 2px;
+    align-content: center;  
+}
+
+.right-header {
+
+
+}
+
+.profile {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    
+}
+
+.profile > i { 
+    grid-column: 1 / 3;
+    align-self: center;
+    justify-self: end;
+}
+
+.profile > img {    
+    margin: 0px 15px;
+    align-self: center;
+    justify-self: center;
+    height: 50px;
+    width: 50px;
+    border-radius: 50px; 
+}
+
+.profile > h2  {
+    margin: 0;
+    grid-column: -1 / -3;
+    align-self: center;
+}
+
+.upper-buttons {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: end;
+}
+
+.upper-buttons > button {
+    width: 100px;
+    height: 40px;
+    font-size: medium;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: #1992D4;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+}
+
 .content {
-    background-color: lightgrey;
+    background-color: #E2E8F0;
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
-    padding: 10px;
+    padding: 30px 20px;
     gap: 20px;
-
 }
 
 .projects {
@@ -67,21 +186,87 @@ nav {
     grid-column: 1 / 2;
 }
 
+.projects > h2, .announcements >h2, .trending >h2 {
+    margin: 10px 0px;
+    padding: 0;
+
+}
 
 .cards {
     display: grid;
     gap: 20px;
     grid-template-columns: 1fr 1fr;
+
 }
 
 .card_item  {
-    background-color: azure;
+    height: 200px;
+    border-radius: 10px;
+    background-color: #FFFFFF;
     padding: 10px;
     border-left-style: solid;
-    border-left-color: orange;
+    border-left-width: 10px;
+    border-left-color: #F0B429;
+    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 7px 0px;
+    display: grid;
+    grid-template-rows: 1fr 3fr 1fr;
+}
+
+.card_buttons {
+    margin: 20px 10px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
+
+}
+
+.card_buttons > button {
+    border: none;
+    background-color: transparent;
+}
+
+
+
+.announcements-card {
+    border-radius: 10px;
+    justify-content: center;
+    background-color: #FFFFFF;
+    padding: 25px 20px;
+    font-size: 13px;
+    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 7px 0px;
+}
+
+.announcements-item {
+    padding: 10px;
+}
+
+.announcements-item > h3, p {
+    padding: 3px;
+    margin: 0;
+}
+
+.middle { 
+    border-top: solid;
+    border-bottom: solid;
+    border-color: #D2D2D2;
+    border-width: 2px;
+
+}
+
+.user_wrapper {
+    border-radius: 10px;
+    justify-content: center;
+    background-color: #FFFFFF;
+    padding: 10px 10px;
+    font-size: 13px;
+    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 7px 0px;
+
+    
 }
 
 .user {
+    padding: 0;
+    margin: 0;
     height: 100px;
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -97,7 +282,7 @@ nav {
 }
 
 .user_id {
-    padding: 10px;
+    padding: 0;
     display: grid;
     gap: 5px;
     align-content: center;
@@ -108,9 +293,22 @@ nav {
     margin: 2px;
 }
 
-.announcements {
-    justify-content: center;
-    background-color: beige;
-    padding: 20px;
-    font-size: 13px;
-}
+  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+/*   @media screen and (max-width: 600px) {
+    .search input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .search input[type=text] {
+      border: 1px solid #ccc;
+    }
+  } */
+
+
+
+  
+  
