--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,17 @@
 html {
     font-family: 'Roboto', sans-serif;
+    
 }
 
 body {
-    max-width: 1500px;
+    max-width: 1500px;    
+    margin: auto;
 
 }
 .wrapper {
     display: grid;
     grid-template-rows: minmax(1fr 200px) 6fr;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 2fr 9fr;
 }
 
 .title {
@@ -19,7 +21,7 @@ body {
     justify-items: center;
     padding: 0;
     margin: 0;
-     padding: 15px; 
+    padding: 15px; 
   
 }
 
@@ -37,8 +39,8 @@ ul {
 
 li {
     color: #FFFFFF;
-    margin-left: 10px;
-    padding: 15px;    
+    margin-left: 15px;
+    padding: 10px;    
     display: grid;
     grid-template-columns: 1fr 4fr;
     align-items: center;
@@ -51,6 +53,7 @@ li > p {
 }
 
 nav {
+    padding-top: 20px;
     background-color: #1992D4;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
@@ -60,6 +63,9 @@ header {
     display: grid;
     grid-template-columns: 3fr 2fr;
     padding: 15px 30px;
+    box-shadow: rgba(100, 100, 111, 0.1)  0px 7px 0px 0px;
+    z-index: 1;
+
 }
 
 .search {
@@ -108,6 +114,7 @@ header {
 .greeting > p, h1 {
     padding: 0;
     margin: 0;
+    margin-left: 10px;
 }
 
 .greeting > p {
@@ -121,10 +128,6 @@ header {
     align-content: center;  
 }
 
-.right-header {
-
-
-}
 
 .profile {
     display: grid;
@@ -139,7 +142,7 @@ header {
 }
 
 .profile > img {    
-    margin: 0px 15px;
+    margin: 0px 30px;
     align-self: center;
     justify-self: center;
     height: 50px;
@@ -155,6 +158,8 @@ header {
 
 .upper-buttons {
     margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
     display: flex;
     justify-content: space-around;
     align-items: end;
@@ -179,6 +184,7 @@ header {
     grid-template-rows: 1fr 1fr;
     padding: 30px 20px;
     gap: 20px;
+  
 }
 
 .projects {
@@ -194,7 +200,7 @@ header {
 
 .cards {
     display: grid;
-    gap: 20px;
+    gap: 32px;
     grid-template-columns: 1fr 1fr;
 
 }
@@ -204,12 +210,20 @@ header {
     border-radius: 10px;
     background-color: #FFFFFF;
     padding: 10px;
+    padding-left: 20px;
     border-left-style: solid;
     border-left-width: 10px;
     border-left-color: #F0B429;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 7px 0px;
     display: grid;
     grid-template-rows: 1fr 3fr 1fr;
+
+    
+}
+
+.card_item > p {    
+    overflow: hidden;
+    text-overflow: "...";
 }
 
 .card_buttons {
@@ -223,21 +237,28 @@ header {
 .card_buttons > button {
     border: none;
     background-color: transparent;
+    margin-left: 10px;
 }
 
+.card_item > h3 {    
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
 
-
-.announcements-card {
+.announcements-card {/* 
+    height:300px; */
     border-radius: 10px;
     justify-content: center;
     background-color: #FFFFFF;
-    padding: 25px 20px;
+    padding: 20px 15px 5px 15px;
     font-size: 13px;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 7px 0px;
 }
 
-.announcements-item {
-    padding: 10px;
+.announcements-item {/* 
+    max-height: 27%; */
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .announcements-item > h3, p {
@@ -245,12 +266,8 @@ header {
     margin: 0;
 }
 
-.middle { 
-    border-top: solid;
-    border-bottom: solid;
-    border-color: #D2D2D2;
-    border-width: 2px;
-
+hr {
+    color: #FFFFFF;
 }
 
 .user_wrapper {
@@ -265,9 +282,7 @@ header {
 }
 
 .user {
-    padding: 0;
-    margin: 0;
-    height: 100px;
+    margin: 20px 10px;
     display: grid;
     grid-template-columns: 1fr 4fr;
     justify-content: center;
@@ -282,15 +297,19 @@ header {
 }
 
 .user_id {
-    padding: 0;
+    margin: 0px 20px;
     display: grid;
-    gap: 5px;
     align-content: center;
     justify-items: start;
 }
 
 .user_id > h3, p {
     margin: 2px;
+}
+
+.user_id > p {
+    font-size: 17px;
+    color:#636363;
 }
 
   /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
